Line-Up scrollbar fix

--- a/assets/sass/blocks/_line-up.sass
+++ b/assets/sass/blocks/_line-up.sass
@@ -56,7 +56,7 @@
   &__content
     flex-basis: 100%
     max-height: 670px
-    overflow: auto
+    overflow-y: scroll
     &::-webkit-scrollbar
       width: 7px
       background: linear-gradient(270deg, #ffffff 45.24%, rgba(#ffffff, 0) 45.45%)
